--- a/module/herramientas/presupuesto/presupuesto.html
+++ b/module/herramientas/presupuesto/presupuesto.html
@@ -4,39 +4,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subir Archivos - Modular-App</title>
+    <title>Presupuesto - Modular-App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="dark-mode">
-    <button class="toggle-mode" id="toggle-mode" title="Cambiar modo">
+    <button class="toggle-mode-presupuesto" id="toggle-mode-presupuesto" title="Cambiar modo">
         <i class="fas fa-moon"></i>
     </button>
 
-    <div class="container">
-        <div class="header">
-            <h1><i class="fas fa-cloud-upload-alt"></i> Subir Archivos</h1>
-            <p>Sube archivos PDF, imágenes y fotos a Firebase Storage</p>
+    <div class="container-presupuesto">
+        <div class="header-presupuesto">
+            <h1><i class="fas fa-file-invoice-dollar"></i> Gestor de Presupuestos</h1>
+            <p>Sube y gestiona archivos PDF e imágenes para presupuestos</p>
         </div>
 
-        <div id="message" class="message"></div>
+        <div id="message-presupuesto" class="message-presupuesto"></div>
 
-        <div class="upload-card">
-            <div class="upload-zone" id="upload-zone">
+        <div class="upload-card-presupuesto">
+            <div class="upload-zone-presupuesto" id="upload-zone-presupuesto">
                 <i class="fas fa-cloud-upload-alt"></i>
-                <h3>Arrastra archivos aquí</h3>
+                <h3>Arrastra archivos de presupuesto aquí</h3>
                 <p>O haz clic para seleccionar archivos</p>
                 <p style="font-size: 0.875rem; opacity: 0.6;">Formatos soportados: PDF, JPG, PNG, GIF (máx. 10MB)</p>
-                <button type="button" class="upload-btn" id="select-files">
+                <button type="button" class="upload-btn-presupuesto" id="select-files-presupuesto">
                     <i class="fas fa-folder-open"></i> Seleccionar Archivos
                 </button>
             </div>
-            <input type="file" id="file-input" class="file-input" multiple 
+            <input type="file" id="file-input-presupuesto" class="file-input-presupuesto" multiple 
                    accept=".pdf,.jpg,.jpeg,.png,.gif" />
         </div>
 
-        <div id="file-list" class="file-list"></div>
+        <div id="file-list-presupuesto" class="file-list-presupuesto"></div>
     </div>
+
+    <script type="module" src="presupuesto.js"></script>
 </body>
+
 </html>
